Move peer version code to its own directory. Remove sample code.
