# docs/swagger.json
@@ -230,7 +230,7 @@
                     "200": {
                         "description": "successful operation",
                         "schema": {
-                            "$ref": "#/definitions/main.peerVersion"
+                            "$ref": "#/definitions/peer.peerVersion"
                         }
                     }
                 }
@@ -328,7 +328,7 @@
                 }
             }
         },
-        "main.peerVersion": {
+        "peer.peerVersion": {
             "type": "object",
             "properties": {
                 "architecture": {
